--- a/index.html
+++ b/index.html
@@ -18,20 +18,33 @@
 				<button class="btn-trier">Trier par prix croissant</button>
 				<br>
 				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<br>
+				<button class="btn-decroissant">Trier par prix décroissant</button>
+				<br>
+				<button class="btn-nodesc">Filtrer les pièces sans description</button>
         <br>
-				<button class="btn-description">Filtrer les pièces avec description</button>
-        <br>
-				<button class="btn-trier-dec">Trier par prix décroissant</button>
+        <p>Prix maximum</p>
+          <input
+            type="range"
+            id="prix-max"
+            name="prix-max"
+            min="0"
+            max="60"
+            value="60"
+            step="5" />
+
+</div>
 			</section>
 
 			<!-- Fiches produits -->
 			<section class="fiches">
-        <div class="abordables">
-          <p>Pièces abordables :</p>
-        </div>
-        <div class="disponibles">
-          <p>Pièces disponibles :</p>
-        </div>
+				<!-- Code ajouté -->
+				<div class="abordables">
+
+				</div>
+				<div class="disponibles">
+
+				</div>
 			</section>
 		</main>
 	</body>
