--- a/index.html
+++ b/index.html
@@ -22,18 +22,9 @@
 				<button class="btn-decroissant">Trier par prix décroissant</button>
 				<br>
 				<button class="btn-nodesc">Filtrer les pièces sans description</button>
-        <br>
-        <p>Prix maximum</p>
-          <input
-            type="range"
-            id="prix-max"
-            name="prix-max"
-            min="0"
-            max="60"
-            value="60"
-            step="5" />
-
-</div>
+				<br>
+				<p>Prix maximum:</p>
+				<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5">
 			</section>
 
 			<!-- Fiches produits -->
